Migrate backup_43_restore_5 test from pulse to terraform (#3136)

--- a/concourse/pipelines/pipeline.yml
+++ b/concourse/pipelines/pipeline.yml
@@ -56,7 +56,6 @@ groups:
   jobs:
   - DPM_netbackup77
   - DPM_backup-restore-ddboost
-  - DPM_backup_43_restore_5
   - MM_gpcheckcat
   - MM_gpexpand
   - DPM_gptransfer-43x-to-5x
@@ -74,6 +73,7 @@ groups:
   - DPM_backup-restore
   - MM_gppkg
   - MM_gprecoverseg
+  - DPM_backup_43_restore_5
 
 ## ======================================================================
 ## resource types
@@ -234,6 +234,15 @@ resources:
     region_name: {{aws-region}}
     secret_access_key: {{bucket-secret-access-key}}
     regexp: windows-cl/greenplum-loaders-5.(.*)-WinXP-x86_32.msi
+
+- name: bin_gpdb4_centos6
+  type: s3
+  source:
+    access_key_id: {{gpdb4-bucket-access-key-id}}
+    bucket: {{gpdb4-bucket-name}}
+    region_name: {{aws-region}}
+    secret_access_key: {{gpdb4-bucket-secret-access-key}}
+    versioned_file: bin_gpdb_centos/bin_gpdb.tar.gz
 
 - name: installer_rhel6_gpdb_rc
   type: s3
@@ -878,6 +887,98 @@ jobs:
       <<: *debug_sleep
   - *ccp_destroy
 
+- name: DPM_backup_43_restore_5
+  plan:
+  - get: nightly-trigger
+    trigger: true
+  - aggregate:
+    - get: gpdb_src
+      params:
+        submodules:
+        - gpMgmt/bin/pythonSrc/ext
+      passed: [compile_gpdb_centos6]
+    - get: gpdb_binary
+      resource: bin_gpdb_centos6
+      passed: [compile_gpdb_centos6]
+    - get: gpdb4_binary
+      resource: bin_gpdb4_centos6
+    - get: ccp_src
+    - get: centos-gpdb-dev-6
+  - put: terraform
+    params:
+      <<: *ccp_create_params
+  - task: setup_gpdb4
+    config:
+      platform: linux
+      image_resource:
+        type: docker-image
+        source:
+          repository: centos
+          tag: "7"
+      inputs:
+      - name: terraform
+      - name: gpdb4_binary
+      - name: ccp_src
+      - name: gpdb_src
+      outputs:
+      - name: cluster_env_files
+      run:
+        path: bash
+        args:
+        - -c
+        - |
+          set -ex
+          source ccp_src/aws/generate_env_files.sh
+          ccp_src/aws/setup_ssh_to_cluster.sh
+          ccp_src/aws/preinstall_gpdb.sh
+          ccp_src/aws/install_gpdb.sh gpdb4_binary
+          ccp_src/aws/run_inspec.sh
+    on_failure:
+      <<: *ccp_destroy
+  - task: run_backup_tests
+    file: gpdb_src/concourse/tasks/run_behave.yml
+    image: centos-gpdb-dev-6
+    params:
+      BEHAVE_FLAGS: --tags=backup_and_restore_backups --tags=-nbuonly --tags=-ddonly --tags=-skip_for_gpdb_43
+    on_failure:
+      <<: *debug_sleep
+  - task: setup_gpdb5
+    config:
+      platform: linux
+      image_resource:
+        type: docker-image
+        source:
+          repository: centos
+          tag: "7"
+      inputs:
+      - name: terraform
+      - name: gpdb_binary
+      - name: ccp_src
+      - name: gpdb_src
+      - name: cluster_env_files
+      run:
+        path: bash
+        args:
+        - -c
+        - |
+          set -ex
+          ccp_src/aws/setup_ssh_to_cluster.sh
+          scp cluster_env_files/hostfile_all mdw:/home/gpadmin/hostfile_all
+          ssh -t mdw "source /home/gpadmin/gpdb_src/concourse/scripts/backup_utils.sh; copy_backup_files"
+          ssh -t mdw "source /home/gpadmin/gpdb_src/concourse/scripts/backup_utils.sh; destroy_gpdb"
+          ccp_src/aws/install_gpdb.sh gpdb_binary
+          ssh -t mdw "source /home/gpadmin/gpdb_src/concourse/scripts/backup_utils.sh; restore_backup_files"
+    on_failure:
+      <<: *debug_sleep
+  - task: run_restore_tests
+    file: gpdb_src/concourse/tasks/run_behave.yml
+    image: centos-gpdb-dev-6
+    params:
+      BEHAVE_FLAGS: --tags=backup_and_restore_restores --tags=-nbuonly --tags=-ddonly --tags=-skip_for_gpdb_43
+    on_failure:
+      <<: *debug_sleep
+  - *ccp_destroy
+
 - name: MM_gppkg
   plan:
   - aggregate:
@@ -1371,26 +1472,6 @@ jobs:
     params:
       <<: *pulse_properties
       PULSE_PROJECT_NAME: "GPDB-BehaveBackupRestore_HarmonizeDDBoost"
-
-- name: DPM_backup_43_restore_5
-  plan:
-  - get: nightly-trigger
-    trigger: true
-  - aggregate: *post_packaging_gets_trigger_false
-  - task: trigger_pulse
-    tags: ["gpdb5-pulse-worker"]
-    file: gpdb_src/ci/pulse/api/trigger_pulse.yml
-    input_mapping: *input_mappings
-    params:
-      <<: *pulse_properties
-      PULSE_PROJECT_NAME: "GPDB-BehaveBackupRestore-43_to_5"
-  - task: monitor_pulse
-    attempts: 2
-    tags: ["gpdb5-pulse-worker"]
-    file: gpdb_src/ci/pulse/api/monitor_pulse.yml
-    params:
-      <<: *pulse_properties
-      PULSE_PROJECT_NAME: "GPDB-BehaveBackupRestore-43_to_5"
 
 - name: MM_gpcheckcat
   plan:
