--- a/concourse/pipelines/pr_pipeline.yml
+++ b/concourse/pipelines/pr_pipeline.yml
@@ -6,7 +6,7 @@ resource_types:
   - name: pull_request_with_submodule
     type: docker-image
     source:
-      repository: jtarchie/github-pullrequest-resource
+      repository: jtarchie/pr
 
 resources:
   - name: gpdb_pr
