Revert "Remove unused COstreamFile."
Turns out that COstreamFile was still used by GPDB's ORCA translator code,
so it wasn't quite dead yet, after all.

This reverts commit 770dd5db14cc1a0f2281ac9c7355d9150ed3827a.

Bump version to 2.42.3

--- a/libgpos/CMakeLists.txt
+++ b/libgpos/CMakeLists.txt
@@ -147,6 +147,8 @@ add_library(gpos
             src/io/COstream.cpp
             include/gpos/io/COstreamBasic.h
             src/io/COstreamBasic.cpp
+            include/gpos/io/COstreamFile.h
+            src/io/COstreamFile.cpp
             include/gpos/io/COstreamString.h
             src/io/COstreamString.cpp
             include/gpos/io/ioutils.h
