Create generic API to set any GUC values in GP_REPLICATION_CONFIG_FILENAME
New API: void set_gp_replication_config(const char *name, const char *value)

This function is inspired by the upstream ALTER SYSTEM command
AlterSystemSetConfigFile() from commit
7dfab04a8aad7aa5066d2625a649d407ed6b7a5f.

Once we merged the upstream changes, we can remove this function and
directly use the AlterSystemSetConfigFile().

Signed-off-by: Abhijit Subramanya <asubramanya@pivotal.io>

--- a/src/backend/utils/misc/test/Makefile
+++ b/src/backend/utils/misc/test/Makefile
@@ -2,10 +2,15 @@ subdir=src/backend/utils/misc
 top_builddir=../../../../..
 include $(top_builddir)/src/Makefile.global
 
-TARGETS=ps_status bitstream bitmap_compression
+TARGETS=ps_status bitstream bitmap_compression guc_gp
 
 include $(top_builddir)/src/backend/mock.mk
 
 guc.t: \
 	$(MOCK_DIR)/backend/storage/ipc/shmem_mock.o \
 	$(MOCK_DIR)/backend/utils/misc/superuser_mock.o
+
+guc_gp.t: \
+    $(MOCK_DIR)/backend/utils/misc/superuser_mock.o \
+    $(MOCK_DIR)/backend/storage/lmgr/lwlock_mock.o \
+    $(MOCK_DIR)/backend/utils/mmgr/mcxt_mock.o
