Add pipeline job for resource group on centos7
Signed-off-by: Zhenghua Lyu <zlv@pivotal.io>

--- a/concourse/pipelines/pipeline.yml
+++ b/concourse/pipelines/pipeline.yml
@@ -12,7 +12,8 @@ groups:
   - icw_gporca_centos7
   - icw_gporca_sles11
   - icw_planner_ictcp_centos6
-  - mpp_resource_group
+  - mpp_resource_group_centos6
+  - mpp_resource_group_centos7
   - MU_check_centos
   - MM_gpperfmon
   - MM_gpcheck
@@ -71,7 +72,8 @@ groups:
   jobs:
   - cs_walrep_1
   - cs_walrep_2
-  - mpp_resource_group
+  - mpp_resource_group_centos6
+  - mpp_resource_group_centos7
   - DPM_backup-restore
   - MM_gpcheckcat
   - MM_gppkg
@@ -465,14 +467,15 @@ resources:
 ## ======================================================================
 ## reusable anchors
 ## ======================================================================
-
-ccp_create_params_anchor: &ccp_create_params
+ccp_create_params_anchor: &ccp_default_params
   action: create
   delete_on_failure: true
   generate_random_name: true
   terraform_source: ccp_src/aws/
-  vars:
-    aws_instance-node-instance_type: t2.medium
+
+ccp_vars_anchor: &ccp_default_vars
+  aws_instance-node-instance_type: t2.medium
+  platform: centos6
 
 ccp_destroy_anchor: &ccp_destroy
   put: terraform
@@ -782,7 +785,7 @@ jobs:
       BLDWRAP_POSTGRES_CONF_ADDONS: "fsync=off"
       TEST_OS: centos
 
-- name: mpp_resource_group
+- name: mpp_resource_group_centos6
   plan:
   - aggregate:
     - get: gpdb_src
@@ -795,7 +798,9 @@ jobs:
     - get: centos-gpdb-dev-6
   - put: terraform
     params:
-      <<: *ccp_create_params
+      <<: *ccp_default_params
+      vars:
+        <<: *ccp_default_vars
   - task: gen_cluster
     file: ccp_src/ci/tasks/gen_cluster.yml
     input_mapping:
@@ -805,6 +810,40 @@ jobs:
   - task: run_tests
     file: gpdb_src/concourse/tasks/ic_gpdb_resgroup.yml
     image: centos-gpdb-dev-6
+    params:
+      TEST_OS: centos6
+    on_failure:
+      <<: *debug_sleep
+  - *ccp_destroy
+
+- name: mpp_resource_group_centos7
+  plan:
+  - aggregate:
+    - get: gpdb_src
+      passed: [compile_gpdb_centos7]
+    - get: bin_gpdb
+      resource: bin_gpdb_centos7
+      passed: [compile_gpdb_centos7]
+      trigger: true
+    - get: ccp_src
+    - get: centos-gpdb-dev-7
+  - put: terraform
+    params:
+      <<: *ccp_default_params
+      vars:
+        <<: *ccp_default_vars
+        platform: centos7
+  - task: gen_cluster
+    file: ccp_src/ci/tasks/gen_cluster.yml
+    input_mapping:
+      gpdb_binary: bin_gpdb
+    on_failure:
+      <<: *ccp_destroy
+  - task: run_tests
+    file: gpdb_src/concourse/tasks/ic_gpdb_resgroup.yml
+    image: centos-gpdb-dev-7
+    params:
+      TEST_OS: centos7
     on_failure:
       <<: *debug_sleep
   - *ccp_destroy
@@ -919,7 +958,9 @@ jobs:
     - get: centos-gpdb-dev-6
   - put: terraform
     params:
-      <<: *ccp_create_params
+      <<: *ccp_default_params
+      vars:
+        <<: *ccp_default_vars
   - task: gen_cluster
     file: ccp_src/ci/tasks/gen_cluster.yml
     on_failure:
@@ -953,7 +994,9 @@ jobs:
     - get: centos-gpdb-dev-6
   - put: terraform
     params:
-      <<: *ccp_create_params
+      <<: *ccp_default_params
+      vars:
+        <<: *ccp_default_vars
   - task: setup_gpdb4
     config:
       platform: linux
@@ -1042,7 +1085,9 @@ jobs:
     - get: centos-gpdb-dev-6
   - put: terraform
     params:
-      <<: *ccp_create_params
+      <<: *ccp_default_params
+      vars:
+        <<: *ccp_default_vars
   - task: gen_cluster
     file: ccp_src/ci/tasks/gen_cluster.yml
     on_failure:
@@ -1199,7 +1244,9 @@ jobs:
     - get: centos-gpdb-dev-6
   - put: terraform
     params:
-      <<: *ccp_create_params
+      <<: *ccp_default_params
+      vars:
+        <<: *ccp_default_vars
   - task: gen_cluster
     file: ccp_src/ci/tasks/gen_cluster.yml
     on_failure:
@@ -1226,7 +1273,9 @@ jobs:
     - get: centos-gpdb-dev-6
   - put: terraform
     params:
-      <<: *ccp_create_params
+      <<: *ccp_default_params
+      vars:
+        <<: *ccp_default_vars
   - task: gen_cluster
     file: ccp_src/ci/tasks/gen_cluster.yml
     on_failure:
@@ -1537,7 +1586,9 @@ jobs:
     - get: centos-gpdb-dev-6
   - put: terraform
     params:
-      <<: *ccp_create_params
+      <<: *ccp_default_params
+      vars:
+        <<: *ccp_default_vars
   - task: gen_cluster
     file: ccp_src/ci/tasks/gen_cluster.yml
     on_failure:
@@ -1567,7 +1618,9 @@ jobs:
     - get: centos-gpdb-dev-6
   - put: terraform
     params:
-      <<: *ccp_create_params
+      <<: *ccp_default_params
+      vars:
+        <<: *ccp_default_vars
   - task: gen_cluster
     file: ccp_src/ci/tasks/gen_cluster.yml
     on_failure:
@@ -1826,7 +1879,8 @@ jobs:
     - icw_gporca_centos7
     - icw_gporca_sles11
     - icw_planner_ictcp_centos6
-    - mpp_resource_group
+    - mpp_resource_group_centos6
+    - mpp_resource_group_centos7
     - MU_check_centos
     - MM_analyzedb
     - MM_gpinitsystem
