PXF CI: run pxf_automation suite as part of pxf regression test job (#3347)
* run pxf_automation as part of pxf regression test

Signed-off-by: Alexander Denissov <adenissov@pivotal.io>

* added missing input

Signed-off-by: Lav Jain <ljain@pivotal.io>

* Fix symbolic links

* create extension pxf before running automation tests

* Hack python psi module by copying it from system to gpdb python

* remove if exists for extension

* Run pxf_automation before regression tests

* Change owner to gpadmin before running tests

* Generalize copying of PSI package

* Generalize install path using GPHOME

--- a/concourse/pipelines/pipeline.yml
+++ b/concourse/pipelines/pipeline.yml
@@ -157,6 +157,13 @@ resources:
     private_key: {{pxf-git-key}}
     uri: {{pxf-git-remote}}
 
+- name: pxf_automation_src
+  type: git
+  source:
+    branch: {{pxf_automation-git-branch}}
+    private_key: {{pxf-git-key}}
+    uri: {{pxf_automation-git-remote}}
+
 - name: centos-gpdb-dev-6
   type: docker-image
   source:
@@ -856,6 +863,8 @@ jobs:
       passed: [compile_gpdb_centos6]
       trigger: true
     - get: singlecluster
+      trigger: true
+    - get: pxf_automation_src
       trigger: true
     - get: centos-gpdb-dev-6
   - task: regression_tests_pxf
