Migrate file replication end to end Pulse tests to CCP
These use i3.xlarge because the tests are IO intensive.

Authors: Jimmy Yih and Taylor Vesely
Signed-off-by: Taylor Vesely <tvesely@pivotal.io>

--- a/concourse/pipelines/pipeline.yml
+++ b/concourse/pipelines/pipeline.yml
@@ -29,6 +29,10 @@ groups:
   - storage
   - cs_walrep_1
   - cs_walrep_2
+  - cs_filerep_e2e_full_primary
+  - cs_filerep_e2e_incr_primary
+  - cs_filerep_e2e_full_mirror
+  - cs_filerep_e2e_incr_mirror
   - QP_memory-accounting
   - regression_tests_gpcloud_centos
   - regression_tests_gphdfs_centos
@@ -43,7 +47,6 @@ groups:
   - DPM_gptransfer-5x-to-5x
   - cs-pg-two-phase
   - cs-filerep-schema-topology-crashrecov
-  - cs-filerep-end-to-end
   - cs-aoco-compression
   - mpp_interconnect
   - QP_runaway-query
@@ -62,7 +65,6 @@ groups:
   - DPM_gptransfer-5x-to-5x
   - cs-pg-two-phase
   - cs-filerep-schema-topology-crashrecov
-  - cs-filerep-end-to-end
   - cs-aoco-compression
   - mpp_interconnect
 
@@ -71,6 +73,10 @@ groups:
   - cs_walrep_1
   - cs_walrep_2
   - mpp_resource_group_centos6
+  - cs_filerep_e2e_full_primary
+  - cs_filerep_e2e_incr_primary
+  - cs_filerep_e2e_full_mirror
+  - cs_filerep_e2e_incr_mirror
   - DPM_backup-restore
   - MM_gpcheckcat
   - MM_gppkg
@@ -515,6 +521,7 @@ ccp_create_params_anchor: &ccp_default_params
 
 ccp_vars_anchor: &ccp_default_vars
   aws_instance-node-instance_type: t2.medium
+  aws_ebs_volume_type: standard
   platform: centos6
 
 ccp_destroy_anchor: &ccp_destroy
@@ -525,6 +532,7 @@ ccp_destroy_anchor: &ccp_destroy
     terraform_source: ccp_src/aws/
     vars:
       aws_instance-node-instance_type: t2.micro #t2.micro is ignored in destroy, but aws_instance-node-instance_type is required.
+      aws_ebs_volume_type: standard
   get_params:
     action: destroy
 
@@ -1429,6 +1437,141 @@ jobs:
     image: centos-gpdb-dev-6
     params:
       TINC_TARGET: walrep_2
+    on_failure:
+      <<: *debug_sleep
+  - *ccp_destroy
+
+- name: cs_filerep_e2e_full_primary
+  plan:
+  - aggregate:
+    - get: gpdb_src
+      passed: [compile_gpdb_centos6]
+    - get: gpdb_binary
+      resource: bin_gpdb_centos6
+      passed: [compile_gpdb_centos6]
+      trigger: true
+    - get: ccp_src
+    - get: centos-gpdb-dev-6
+  - put: terraform
+    params:
+      <<: *ccp_default_params
+      terraform_source: ccp_src/aws-nvme-block-device/
+      vars:
+        <<: *ccp_default_vars
+        aws_instance-node-instance_type: i3.xlarge
+  - task: gen_cluster
+    file: ccp_src/ci/tasks/gen_cluster.yml
+    params:
+      <<: *ccp_gen_cluster_default_params
+    on_failure:
+      <<: *ccp_destroy
+  - task: run_tests
+    file: gpdb_src/concourse/tasks/run_tinc.yml
+    image: centos-gpdb-dev-6
+    params:
+      TINC_TARGET: filerep_end_to_end_full_primary
+    on_failure:
+      <<: *debug_sleep
+  - *ccp_destroy
+
+- name: cs_filerep_e2e_incr_primary
+  plan:
+  - aggregate:
+    - get: gpdb_src
+      passed: [compile_gpdb_centos6]
+    - get: gpdb_binary
+      resource: bin_gpdb_centos6
+      passed: [compile_gpdb_centos6]
+      trigger: true
+    - get: ccp_src
+    - get: centos-gpdb-dev-6
+  - put: terraform
+    params:
+      <<: *ccp_default_params
+      terraform_source: ccp_src/aws-nvme-block-device/
+      vars:
+        <<: *ccp_default_vars
+        aws_instance-node-instance_type: i3.xlarge
+        number_of_nodes: 1
+  - task: gen_cluster
+    file: ccp_src/ci/tasks/gen_cluster.yml
+    params:
+      <<: *ccp_gen_cluster_default_params
+    on_failure:
+      <<: *ccp_destroy
+  - task: run_tests
+    file: gpdb_src/concourse/tasks/run_tinc.yml
+    image: centos-gpdb-dev-6
+    params:
+      TINC_TARGET: filerep_end_to_end_incr_primary
+    on_failure:
+      <<: *debug_sleep
+  - *ccp_destroy
+
+- name: cs_filerep_e2e_full_mirror
+  plan:
+  - aggregate:
+    - get: gpdb_src
+      passed: [compile_gpdb_centos6]
+    - get: gpdb_binary
+      resource: bin_gpdb_centos6
+      passed: [compile_gpdb_centos6]
+      trigger: true
+    - get: ccp_src
+    - get: centos-gpdb-dev-6
+  - put: terraform
+    params:
+      <<: *ccp_default_params
+      terraform_source: ccp_src/aws-nvme-block-device/
+      vars:
+        <<: *ccp_default_vars
+        aws_instance-node-instance_type: i3.xlarge
+        number_of_nodes: 1
+  - task: gen_cluster
+    file: ccp_src/ci/tasks/gen_cluster.yml
+    params:
+      <<: *ccp_gen_cluster_default_params
+    on_failure:
+      <<: *ccp_destroy
+  - task: run_tests
+    file: gpdb_src/concourse/tasks/run_tinc.yml
+    image: centos-gpdb-dev-6
+    params:
+      TINC_TARGET: filerep_end_to_end_full_mirror
+    on_failure:
+      <<: *debug_sleep
+  - *ccp_destroy
+
+- name: cs_filerep_e2e_incr_mirror
+  plan:
+  - aggregate:
+    - get: gpdb_src
+      passed: [compile_gpdb_centos6]
+    - get: gpdb_binary
+      resource: bin_gpdb_centos6
+      passed: [compile_gpdb_centos6]
+      trigger: true
+    - get: ccp_src
+    - get: centos-gpdb-dev-6
+  - put: terraform
+    params:
+      <<: *ccp_default_params
+      terraform_source: ccp_src/aws-nvme-block-device/
+      vars:
+        <<: *ccp_default_vars
+        aws_instance-node-instance_type: i3.xlarge
+        number_of_nodes: 1
+  - task: gen_cluster
+    file: ccp_src/ci/tasks/gen_cluster.yml
+    params:
+      <<: *ccp_gen_cluster_default_params
+    on_failure:
+      <<: *ccp_destroy
+  - task: run_tests
+    file: gpdb_src/concourse/tasks/run_tinc.yml
+    image: centos-gpdb-dev-6
+    params:
+      TINC_TARGET: filerep_end_to_end_incr_mirror
     on_failure:
       <<: *debug_sleep
   - *ccp_destroy
